# Atividade_Modulo_Lora

./: README.md
Lora_receptor/: CMakeLists.txt  lora_receptor.c  lora_receptor.md
Lora_transmissor/: CMakeLists.txt  README.md  lora_transmitter.c
